# ELO-Auto-Image-Reviewer

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
elo_reviewer/: cli.py  console.py  elo.py  image_utils.py  judge.py  output.py  prompt_loader.py  tournament.py
elo_reviewer/prompts/: default.md  illustrations.md  natural_photos.md  tshirt_back_print.md
